# Visualize_Compiler

./: README.md  TREE_VISUALIZATION_ENHANCEMENTS.md  package-lock.json  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/api/compile/: route.ts
components/visualizer/: CodeGenerationTab.tsx  CodeInput.tsx  IntermediateCodeTab.tsx  LexicalAnalysisTab.tsx  OptimizationTab.tsx  SemanticAnalysisTab.tsx  SyntaxAnalysisTab.tsx
lib/: ast-popup-html.ts
scripts/: compile.py  setup-db.sql
scripts/compiler/: __init__.py  code_generator.py  compilation_types.py  compiler.py  ir_generator.py  lexer.py  optimizer.py  parser.py  pyproject.toml  semantic_analyzer.py
