[project]
name = "compiler-visualizer"
version = "1.0.0"
description = "Compiler phases visualizer with lexer, parser, semantic analyzer, IR generator, optimizer, and code generator"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
